Aligned Picture Correctly

--- a/style.css
+++ b/style.css
@@ -81,12 +81,9 @@ nav a::before {
 }
 
 #Myles {
-  width: auto;
-  max-width: 500px;
+  max-width: 100%;
   height: auto;
-  max-height: 500px;
-  padding: 50px;
-  float: right;
+  padding: 25px;
 }
 
 .content {
